chore: rpc style form upload example
